tests/semantic/valid/32_e_new_correct_arity.hulk
type P(x:Number, y:Number) { }

let z = new P(1, 2) in print(z);
