tests/semantic/invalid/33_e_new_wrong_arity.hulk
type P(x:Number, y:Number) { }

let z = new P(1) in print(z);
